--- a/app/config/route.config.json
+++ b/app/config/route.config.json
@@ -25,7 +25,168 @@
             "isAdmin":true,
             "isUser":false
 
+        },
+        {
+            "controller":"../components/user/controller/user.js",
+            "route":"/api/v1/user",
+            "method":"get",
+            "action":"getAllUsers",
+            "isAdmin":true,
+            "isUser":false
+
+        },
+        {
+            "controller":"../components/user/controller/user.js",
+            "route":"/api/v1/user/:userId",
+            "method":"get",
+            "action":"getUserById",
+            "isAdmin":true,
+            "isUser":false
+
+        },
+        {
+            "controller":"../components/user/controller/user.js",
+            "route":"/api/v1/user/:userId",
+            "method":"put",
+            "action":"updateUserById",
+            "isAdmin":true,
+            "isUser":false
+
+        },
+        {
+            "controller":"../components/user/controller/user.js",
+            "route":"/api/v1/user/:userId",
+            "method":"delete",
+            "action":"deleteUserById",
+            "isAdmin":true,
+            "isUser":false
+
+        },
+        {
+            "controller":"../components/bank/controller/bank.js",
+            "route":"/api/v1/bank",
+            "method":"post",
+            "action":"createBank",
+            "isAdmin":true,
+            "isUser":false
+
+        },
+        {
+            "controller":"../components/bank/controller/bank.js",
+            "route":"/api/v1/bank",
+            "method":"get",
+            "action":"getAllBanks",
+            "isAdmin":true,
+            "isUser":false
+
+        },
+        {
+            "controller":"../components/bank/controller/bank.js",
+            "route":"/api/v1/bank/:bankId",
+            "method":"get",
+            "action":"getBankById",
+            "isAdmin":true,
+            "isUser":false
+
+        },
+        {
+            "controller":"../components/bank/controller/bank.js",
+            "route":"/api/v1/bank/:bankId",
+            "method":"put",
+            "action":"updateBankById",
+            "isAdmin":true,
+            "isUser":false
+
+        },
+        {
+            "controller":"../components/bank/controller/bank.js",
+            "route":"/api/v1/bank/:bankId",
+            "method":"delete",
+            "action":"deleteBankById",
+            "isAdmin":true,
+            "isUser":false
+
+        },
+        {
+            "controller":"../components/account/controller/account.js",
+            "route":"/api/v1/user/:userId/bank/:bankId/account",
+            "method":"post",
+            "action":"createAccount",
+            "isAdmin":false,
+            "isUser":true
+
+        },
+        {
+            "controller":"../components/account/controller/account.js",
+            "route":"/api/v1/user/:userId/account",
+            "method":"get",
+            "action":"getAllAccounts",
+            "isAdmin":false,
+            "isUser":true
+
+        },
+        {
+            "controller":"../components/account/controller/account.js",
+            "route":"/api/v1/user/:userId/account/:accountId",
+            "method":"get",
+            "action":"getAccountById",
+            "isAdmin":false,
+            "isUser":true
+
+        },
+        {
+            "controller":"../components/account/controller/account.js",
+            "route":"/api/v1/user/:userId/account/:accountId",
+            "method":"delete",
+            "action":"deleteAccountById",
+            "isAdmin":false,
+            "isUser":true
+
+        },
+        {
+            "controller":"../components/account/controller/account.js",
+            "route":"/api/v1/user/:userId/account/:accountId/deposit",
+            "method":"post",
+            "action":"depositUserAccount",
+            "isAdmin":false,
+            "isUser":true
+        },
+        {
+            "controller":"../components/account/controller/account.js",
+            "route":"/api/v1/user/:userId/account/:accountId/withdraw",
+            "method":"post",
+            "action":"withdrawUserAccount",
+            "isAdmin":false,
+            "isUser":true
+        },
+        {
+            "controller":"../components/account/controller/account.js",
+            "route":"/api/v1/user/:userId/account/:accountId/balance",
+            "method":"get",
+            "action":"getBalanceUserAccount",
+            "isAdmin":false,
+            "isUser":true
+        },
+        {
+            "controller":"../components/account/controller/account.js",
+            "route":"/api/v1/user/:userId/account/:accountId/transfer-diff",
+            "method":"post",
+            "action":"transferWithinDiffBankId",
+            "isAdmin":false,
+            "isUser":true
+        },
+        {
+            "controller":"../components/account/controller/account.js",
+            "route":"/api/v1/user/:userId/account/:accountId/transfer-same",
+            "method":"post",
+            "action":"transferWithinSameBankId",
+            "isAdmin":false,
+            "isUser":true
         }
+        
+
+
+
 
 
 
